@@ -1,3 +1,7 @@
+2002/07/12 christianwelzel
+- Implemented Feature 535144: Specifying Output Profile in TeX file
+  The last used output-profile will be saved in the tcp-file.
+
 2002/07/09 svenwiegand
 - Updated version ids in ressources.
 
